--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -348,7 +348,7 @@ main {
     height: 100%;
     width: 100%;
     margin: 0 auto;
-    background-color: #f8f8f8;
+    background-color: rgba(255,255,255,0.4);
     padding: 10px;
     border-radius: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
@@ -390,7 +390,7 @@ main {
     height: 100%;
     width: 100%;
     margin: 0 auto;
-    background-color: #f8f8f8;
+    background-color: rgba(255,255,255,0.4);
     padding: 10px;
     border-radius: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
