--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -88,6 +88,45 @@ html, body {
         display: block !important;
         padding-bottom: 100px !important;
     }
+    .main-section {
+        width: 85vw !important;
+        max-width: 85vw !important;
+        margin: 0 auto 16px auto !important;
+        box-sizing: border-box;
+        display: block !important;
+        background-color: rgba(255,255,255,0.4);
+        padding: 10px;
+        border-radius: 10px;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+        text-align: center;
+    }
+    .main-contact-section {
+        display: block !important;
+    }
+    .main-contact-section-2 {
+        width: 85vw !important;
+        max-width: 85vw !important;
+        margin: 0 auto 16px auto !important;
+        box-sizing: border-box;
+        display: block !important;
+        background-color: rgba(255,255,255,0.4);
+        padding: 10px;
+        border-radius: 10px;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+        text-align: center;
+    }
+    .main-section-gallery {
+        width: 85vw !important;
+        max-width: 85vw !important;
+        margin: 0 auto 16px auto !important;
+        box-sizing: border-box;
+        display: block !important;
+        background-color: rgba(255,255,255,0.4);
+        padding: 10px;
+        border-radius: 10px;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+        text-align: center;
+    }
 }
 
 @media screen and (min-width: 769px) and (max-width: 1100px) {
